@@ -26,6 +26,15 @@ name|java
 operator|.
 name|util
 operator|.
+name|ArrayList
+import|;
+end_import
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|LinkedList
 import|;
 end_import
@@ -400,16 +409,20 @@ return|;
 block|}
 else|else
 block|{
-name|LinkedList
+name|List
 argument_list|<
 name|QueryNode
 argument_list|>
 name|children
 init|=
 operator|new
-name|LinkedList
+name|ArrayList
 argument_list|<>
-argument_list|()
+argument_list|(
+name|fields
+operator|.
+name|length
+argument_list|)
 decl_stmt|;
 name|children
 operator|.
@@ -471,7 +484,13 @@ name|CloneNotSupportedException
 name|e
 parameter_list|)
 block|{
-comment|// should never happen
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+name|e
+argument_list|)
+throw|;
 block|}
 block|}
 return|return
