@@ -172,6 +172,9 @@ Bug Fixes
 
 Other
 
+* LUCENE-6827: Use explicit capacity ArrayList instead of a LinkedList 
+  in MultiFieldQueryNodeProcessor. (Dawid Weiss).
+
 * LUCENE-6812: Upgrade RandomizedTesting to 2.1.17. (Dawid Weiss)
 
 * LUCENE-6174: Improve "ant eclipse" to select right JRE for building.
